# ComfyUI-String-Helper

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  translation_utils.py
.github/workflows/: publish.yml
nodes/: lib.py  show_translate_string.py  string_converter.py  string_formatter.py  string_list.py  string_matcher.py  time_formatter.py
template/: string_list.csv
web/js/: showFormattedString.js  showTranslateString.js
